tests/snapshots/text__it_can_parse_document_with_just_text.snap
---
source: tests/text.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    "hello world"
  ]
}
