tests/snapshots/text__it_can_parse_document_with_multiple_text_elements.snap
---
source: tests/text.rs
expression: ast
---
Ast {
    tree_type: DocumentFragment,
    nodes: [
        Text(
            "hello world\nhere\'s another line for you!",
        ),
        Element(
            Element {
                name: "div",
                variant: Void,
                attributes: {},
                nodes: [],
            },
        ),
        Text(
            "The end",
        ),
    ],
}
