tests/snapshots/text__it_can_parse_document_with_text_and_line_breaks.snap
---
source: tests/text.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "nodes": [
    "hello world\nhere's another line for you!\nThe end"
  ]
}
