tests/snapshots/text__it_can_parse_text_in_paragraph_with_weird_formatting.snap
---
source: tests/text.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "p",
      "variant": "normal",
      "children": [
        "\n    This is a ",
        {
          "name": "b",
          "variant": "normal",
          "children": [
            "para"
          ]
        },
        "gra",
        {
          "name": "b",
          "variant": "normal",
          "children": [
            "ph"
          ]
        },
        " with some",
        {
          "name": "i",
          "variant": "normal",
          "children": [
            " weird "
          ]
        },
        " formatting.\n"
      ]
    }
  ]
}
