tests/snapshots/text__it_can_parse_text_with_chevron.snap
---
source: tests/text.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    "hello <> world"
  ]
}
