tests/snapshots/text__it_can_parse_text_with_only_spaces_between_elements.snap
---
source: tests/text.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    "This is a ",
    {
      "name": "b",
      "variant": "normal",
      "children": [
        "para"
      ]
    },
    " ",
    {
      "name": "b",
      "variant": "normal",
      "children": [
        "ph"
      ]
    },
    " with some",
    {
      "name": "i",
      "variant": "normal",
      "children": [
        " weird "
      ]
    },
    " formatting."
  ]
}
